third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/alternative_exprs.rs
const THREE: u8 = 3;

#[derive(num_enum::TryFromPrimitive)]
#[repr(i8)]
enum Numbers {
    Zero = 0,
    #[num_enum(alternatives = [-1, 2, THREE])]
    One = 1,
}

fn main() {

}
